# paper

./: Dockerfile  README.md  Readme.md  paper.md  paper1.md
distance_csv/map1/existing_algorithm/: robot002_distance.csv  robot003_distance.csv  robot007_distance.csv  robot222_distance.csv  robot227_distance.csv  robot228_distance.csv
distance_csv/map1/proposed_algorithm/: robot008_distance.csv  robot009_distance.csv  robot118_distance.csv  robot119_distance.csv  robot229_distance.csv
duck_paper_bag/map1/: duck_paper_map1_data  task_time.ods
duck_paper_bag/map2/: duck_paper_map2_data
map1/existing_algorithm/map1_existing_ex1/: map_0010.csv  map_0020.csv  map_0030.csv  map_0040.csv  map_0050.csv  map_0060.csv  map_0070.csv  map_0080.csv  map_0090.csv  map_0100.csv  map_0110.csv  map_0120.csv  map_0130.csv  map_0140.csv  map_0150.csv  my002_posestamped.csv  my003_posestamped.csv  my007_posestamped.csv  my222_posestamped.csv  my227_posestamped.csv  my228_posestamped.csv
map1/existing_algorithm/map1_existing_ex10/: map_0010.csv  map_0020.csv  map_0030.csv  map_0040.csv  map_0050.csv  map_0060.csv  map_0070.csv  map_0080.csv  map_0090.csv  map_0100.csv  map_0110.csv  map_0120.csv  map_0130.csv  map_0140.csv  map_0150.csv  map_0160.csv  my002_posestamped.csv  my003_posestamped.csv  my007_posestamped.csv  my222_posestamped.csv  my227_posestamped.csv  (+1 more)
src/pose_map_logger/: package.xml  setup.cfg  setup.py
src/pose_map_logger/pose_map_logger/: __init__.py  distance_boxplot.py  pose_and_map_logger.py  trajectory_plot_with_map.py  trajectory_plot_with_map2.py
(+1475 files in other folders)
